2011-08-08    <zag@manzanillo>

	* tests/bl/vl/kb/drivers/omero/test_table.py (TestProxyCore):
	added a test for the new get_table_rows selector type cases.

	* bl/vl/kb/drivers/omero/proxy_core.py (ProxyCore.get_table_rows):
	selector can now be either a selection or a list of selections. In
	the latter case, it is interpreted as an 'or' condition between
	the list elements.

	* bl/vl/kb/drivers/omero/genotyping.py (Marker): Added. It is only
	a placeholder for the time being.

	* bl/vl/kb/drivers/omero/proxy.py (Proxy.get_snp_markers): we may
	want markers as standard objects, afterall...

2011-08-05    <zag@manzanillo>

	* galaxy/lib/galaxy/webapps/vlweb/vl_app.py (UniverseApplication):
	Now we can gather omero specific variables from the application
	configuration file
	(UniverseApplication.__init__): Added conf variable 'vl_loglevel'

2011-08-05    <simleo@neuron.crs4.it>

	* bl/vl/utils/snp.py: generalized to support SNPs with more than
	two possible alleles.

2011-08-04    <simleo@neuron.crs4.it>

	* bl/vl/app/import modules now have a galaxy front-end.

	* bl/vl/utils/snp.py (_identify_strand): simpler implementation
	that works with sequences containing non-ACGT letters (basically,
	anything that's not explicitly defined as unambiguous is
	ambiguous). After skipping indels, this version correctly
	identifies all illumina 'TopGenomicSeq' masks as TOP (see
	tests/bl/vl/utils/check_strand_vs_ann.py).

2011-08-03    <zag@manzanillo>

	* bl/vl/app/importer/diagnosis.py: Changed to new style.

	* bl/vl/app/importer/data_collection.py: Changed to new style.

	* bl/vl/app/importer/data_object.py: Changed to new style.

	* bl/vl/app/importer/data_sample.py: Changed to new style.

2011-08-03    <simleo@neuron.crs4.it>

	* bl/vl/app/check_rs.py: changed to convert all masks to TOP
	before doing anything with them.

	* bl/vl/utils/snp.py: rewrote to work without side effects on a
	split mask (this is emphasized by the fact that a split mask is