@@ -3,9 +3,8 @@ rs12265218	0	False
 rs11981089	1	False
 rs7625376	2	False
 rs741592	3	False
-rs8078079	4	False	
+rs8078079	4	False
 rs9567736	5	False
 rs4693427	6	False
 rs4757019	7	False
 rs7958813	8	False
-
